# OS_assignment_2

./: .gitignore  CMakeLists.txt  README.md  config  main.c  scheduler.h
fcfs/: fcfs.c
rr/: rr.c
sjf/: sjf.c
test/: process1.c
utils/: linkedlist.c  linkedlist.h  utils.c  utils.h
